app/src/assets/pages/home.less
/* ... */
.conversation-name {
  color: hsl(var(--text));
  font-weight: bold !important;
  word-wrap: anywhere;
}

.chat-action {
  @keyframes up {
    0% {
      opacity: 0;
      transform: translateY(100%);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }

  animation: up 0.2s ease-in-out;
}

.web {
  color: hsl(var(--input-unread));
  transition: .25s linear;

  &.enable {
    color: hsl(var(--text));
  }
}

.toolbar {
  position: relative;
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
  height: 100%;
  margin: 0;
  width: max-content;
  padding: 0.5rem;
  background: hsl(var(--background));
  border-right: 1px solid hsl(var(--border));
  transition: 0.25s;

  &.stacked {
    @media (orientation: landscape) {
      width: 0;
      padding-left: 0;
      padding-right: 0;
      border-right: 0;
    }

    @media (orientation: portrait) {
      height: 0;
      padding-top: 0;
      padding-bottom: 0;
      border-top: 0;
    }

    .toolbar-text {
      display: none;
    }

    button {
      width: 0;
      flex-shrink: 1;
    }
  }

  .bar-kit {
    position: absolute;
    opacity: 0;
    transition: 0.25s ease-in-out;
    cursor: pointer;
    z-index: 64;
    border-radius: 0.25rem;
    background: hsl(var(--background));
    width: max-content;
    height: max-content;
    border: 1px solid hsl(var(--border-active));

    &::after {
      content: "";
      position: absolute;
      background: transparent;
    }

    @media (orientation: portrait) {
      top: 0;
      left: 50%;
      transform: translate(-50%, -100%);
      padding: 0 0.75rem;
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;

      svg {
        rotate: 0deg;
      }

      &.stacked svg {
        rotate: 180deg;
      }
    }

    @media (orientation: landscape) {
      top: 50%;
      right: 0;
      transform: translate(100%, -50%);
      padding: 0.75rem 0;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;

      svg {
        rotate: 90deg;
      }

      &.stacked svg {
        rotate: -90deg;
      }
    }
  }

  &.stacked {
    .bar-kit {
      @media (orientation: portrait) {
        &::after {
          left: 50%;
          bottom: -0.75rem;
          width: 6rem;
          height: 3rem;
          transform: translateX(-50%);
        }
      }

      @media (orientation: landscape) {
        &::after {
          top: 50%;
          left: -1rem;
          width: 3.5rem;
          height: 7rem;
          transform: translateY(-50%);
        }
      }
    }
  }

  &:hover, &:focus-within, &:focus, &:active {
    .bar-kit {
      opacity: 1;
      pointer-events: all;
    }
  }

  & > * {
    margin-bottom: 0.75rem;

    &:last-child {
      margin-bottom: 0;
    }
  }
}
/* ... */

